--- a/_includes/head.html
+++ b/_includes/head.html
@@ -60,7 +60,7 @@
 
     <link rel="manifest"              href="{{ site.url }}{{ site.baseurl }}/assets/manifest.json">
 
-    <meta name="msapplication-TileColor" content="#2d89ef">
+    <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-TileImage" content="{{ site.url }}{{ site.baseurl }}/assets/mstile-144x144.png">
     <meta name="theme-color"             content="#ffffff">
 
