update og pictures

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,8 +37,8 @@
     <meta content="{{ site.url }}{{ site.baseurl }}{{ page.url }}" property="twitter:url">
     {% endif %}
 
-    <meta content="{{ site.url }}{{ site.baseurl }}/assets/Stepp0r_og.png" property="og:image" >
-    <meta content="{{ site.url }}{{ site.baseurl }}/assets/Stepp0r_og.png" property="twitter:image" >
+    <meta content="{{ site.url }}{{ site.baseurl }}/assets/Respons0r_og.png" property="og:image" >
+    <meta content="{{ site.url }}{{ site.baseurl }}/assets/Respons0r_og.png" property="twitter:image" >
 
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
