--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,7 +18,7 @@
     {% endif %}
 
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:site" content="@midirespons0r">
+    <meta name="twitter:site" content="@respons0r">
     <meta name="twitter:creator" content="@mr_van_dalo">
 
     {% if page.description %}
